--- a/go/Containerfile
+++ b/go/Containerfile
@@ -1,11 +1,11 @@
 ARG LANGUAGE_VERSION
-FROM golang:${LANGUAGE_VERSION}-alpine AS builder
+FROM golang:1.21-alpine AS builder
 
-ARG APP_NAME=app
-ARG BUILD_FLAGS
-ARG TARGET_OS=linux
-ARG TARGET_ARCH=amd64
-ARG ENV_FILE="env.list"
+ARG APP_NAME="app"
+ARG BUILD_FLAGS="NONE"
+ARG STATIC_DIRS=""
+ARG TARGET_ARCH="amd64"
+ARG TARGET_OS="linux"
 WORKDIR /app
 COPY . .
 ENV GOOS=${TARGET_OS}
@@ -21,13 +21,14 @@ FROM alpine:3.21.3
 
 WORKDIR /app
 ARG APP_NAME=app
-COPY --from=builder /app/${APP_NAME} /usr/local/bin/${APP_NAME}
-COPY --from=builder /app/templates /usr/local/bin/templates
-COPY --from=builder /app/static /app/static
 
-ARG ENV_FILE="env.list"
-COPY ${ENV_FILE} /app/.env
+COPY --from=builder \
+  /app/${APP_NAME} \
+  /app/templates \
+  /app/static \
+  /app/
+
 RUN if [ -f /app/.env ]; then cat /app/.env >> /etc/environment; fi
 RUN chmod +x /usr/local/bin/${APP_NAME}
 EXPOSE 8080
-CMD ["/usr/local/bin/app"]
+CMD ["/app/app"]
