--- a/python/Containerfile
+++ b/python/Containerfile
@@ -3,4 +3,4 @@ FROM python:${LANGUAGE_VERSION}
 WORKDIR /app
 COPY . .
 RUN pip install --no-cache-dir -r requirements.txt
-CMD ["python", "main.py"]
+ENTRYPOINT ["python3", "main.py"]
