--- a/python/Containerfile
+++ b/python/Containerfile
@@ -1,6 +1,6 @@
 ARG LANGUAGE_VERSION=3.13
 FROM python:${LANGUAGE_VERSION}
 WORKDIR /app
-COPY python/. .
+COPY python/ .
 RUN pip install --no-cache-dir -r requirements.txt
 ENTRYPOINT ["python3", "main.py"]
