use absolute COPY

--- a/python/Containerfile
+++ b/python/Containerfile
@@ -1,6 +1,6 @@
 ARG LANGUAGE_VERSION=3.13
 FROM python:${LANGUAGE_VERSION}
 WORKDIR /app
-COPY . .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY . /app/python
+RUN pip install --no-cache-dir -r /app/python/requirements.txt
 ENTRYPOINT ["python3", "/app/python/main.py"]
